# parallel_EM_clustering

./: .gitignore  CMakeLists.txt  README.md  job.sh  job_scaling.sh  job_scaling_200k_6D.sh  job_scaling_200k_K5_D5.sh  job_scaling_2M_2D.sh  job_scaling_3M_2D.sh  job_scaling_500k_8D.sh  job_scaling_N20000_D6.sh  job_scaling_N250000_D4.sh  job_scaling_N4000_D8.sh  job_scaling_N625000_D4.sh  job_scaling_Ptest_200k.sh  job_scaling_Ptest_300k.sh  job_scaling_Ptest_500k.sh  job_scaling_Ptest_D16.sh  job_scaling_Ptest_D32.sh  job_scaling_Ptest_D7.sh  job_scaling_Ptest_D8.sh  job_scaling_Ptest_K10.sh  job_scaling_Ptest_K100.sh  job_scaling_Ptest_K15.sh  job_scaling_Ptest_K5.sh  job_scaling_Ptest_K50.sh  job_scaling_temp.sh  scaling_P50K_K3_D4_out.txt
datasets/: N20000_K4_D6.csv  N4000_K4_D8.csv  N800_K4_D3.csv  gmm_P10000_K3_D2.csv  gmm_P50000_K3_D4.csv  gmm_data.csv  gmm_data_with_labels.csv
datasets/labels/: gmm_P10000_K3_D2_labels.csv
datasets/old/: gmm_data_with_labels.csv
generator_and_analysis/: data_generator.R  perf_em_results.R  plot_em_results.R
generator_and_analysis/test/: perf_em_results.R
models/: burst_ultimate.pt  burst_ultimate_scaler.pkl  congestion_ultimate.pt  congestion_ultimate_scaler.pkl  ddos_ultimate_scaler.pkl  normal_ultimate.pt  normal_ultimate_scaler.pkl
r_scripts/: gmm.R  plot_em_results.R  plot_scaling_D.R  plot_scaling_K.R  plot_scaling_N.R
results/: em_results.csv  scaling_Ptest_200k_interactive.csv  scaling_Ptest_500k_1.csv  scaling_Ptest_K5_2.csv  scaling_results_P50K_K3_D4.csv  strong_scaling_omp_results_P50000_K10_D6.txt  strong_scaling_omp_results_P50000_K15_D6.txt  strong_scaling_omp_results_P50000_K5_D6.txt  strong_scaling_omp_results_P50000_K5_D7.txt
results/mpi/: scaling_Ptest_200k_1.csv  scaling_Ptest_300k_1.csv  scaling_Ptest_D7_1.csv  scaling_Ptest_D8_1.csv  scaling_Ptest_K10_1.csv  scaling_Ptest_K10_2.csv  scaling_Ptest_K15_1.csv  scaling_Ptest_K5_1.csv
results/old/: em_results.csv
results/omp/: scaling_Ptest_200k_1.csv  scaling_Ptest_300k_1.csv  scaling_Ptest_500k_1.csv  scaling_Ptest_D6_1.csv  scaling_Ptest_D7_1.csv  scaling_Ptest_D8_1.csv  scaling_Ptest_K10_1.csv  scaling_Ptest_K15_1.csv
scripts/: custom_run.sh  dataset_generation_only.sh  quick_start.sh  strong_scaling_omp.sh
scripts/mpi/: job_scaling_Ptest_200k.sh  job_scaling_Ptest_300k.sh  job_scaling_Ptest_500k.sh  job_scaling_Ptest_D7.sh  job_scaling_Ptest_D8.sh  job_scaling_Ptest_K10.sh  job_scaling_Ptest_K15.sh  job_scaling_Ptest_K5.sh
scripts/omp/: strong_scaling_omp.sh
src/: em_algorithm.c  gaussian_mixture.c  log_likelihood.c  main.c  multiv_gaussian.c  utils.c
src/include/: breakdown.h  commons.h  matrix_utils.h  timing.h  utils.c  utils.h
src/include/timing/: timing.h
src/matrix/: matrix.h  matrix_inverse.c  matrix_inverse_lu.c  matrix_utils.c  matrix_utils.h
src/parallel_mpi/: em_algorithm.c  main.c
src/parallel_omp/: em_algorithm.c  main.c
